Locals guide, podcast, and recipe update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="locals-guide.html">Local's Guide</a></li>
-                    <li><a href="podcast.html">Podcast</a></li>
+                    <li><a href="the-green-bay-narrative.html">Podcast</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="shop.html">Shop</a></li>
                 </ul>
@@ -148,7 +148,7 @@
         <div class="about-me-container">
             <div class="about-me-img">
                 <figure>
-                    <img src="img/ben.jpg" alt="Ben and friends">
+                    <img src="img/ben.jpg" alt="Ben - The Green Bay Guy">
                 </figure>
             </div>
             <div class="about-me-bio">
@@ -235,7 +235,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="locals-guide.html">Local's Guide</a></li>
-                    <li><a href="podcast.html">Podcast</a></li>
+                    <li><a href="the-green-bay-narrative.html">Podcast</a></li>
                     <li><a href="recipes.html">Recipe</a></li>
                     <li><a href="shop.html">Shop</a></li>
                 </ul>
