--- a/locals-guide.html
+++ b/locals-guide.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="locals-guide.html">Local's Guide</a></li>
-                    <li><a href="podcast.html">Podcast</a></li>
+                    <li><a href="the-green-bay-narrative.html">Podcast</a></li>
                     <li><a href="recipes.html">Recipes</a></li>
                     <li><a href="shop.html">Shop</a></li>
                 </ul>
@@ -89,7 +89,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="locals-guide.html">Local's Guide</a></li>
-                    <li><a href="podcast.html">Podcast</a></li>
+                    <li><a href="the-green-bay-narrative.html">Podcast</a></li>
                     <li><a href="recipes.html">Recipe</a></li>
                     <li><a href="shop.html">Shop</a></li>
                 </ul>
