Local's Guide post updates
Started each Local's Guide post

--- a/eat.html
+++ b/eat.html
@@ -87,7 +87,7 @@
 
         <div class="lg-container">
             <!-- Local's Guide Post -->
-            <article class="lg"><a href="/locals-guide/the-pancake-place.html">
+            <article class="lg"><a href="the-pancake-place.html">
                 <figure>
                     <img src="img/Locals-Guide/Eat/Breakfast/the-pancake-place.jpg" alt="The Pancake Place's loaded hashbrowns">
                 </figure>
@@ -402,7 +402,7 @@
             </a></article>
 
             <!-- Local's Guide Post -->
-            <article class="lg dinner"><a href="cheese-cake-heaven.html">
+            <article class="lg dinner dessert"><a href="cheese-cake-heaven.html">
                 <figure>
                     <img src="img/Locals-Guide/Eat/Lunch/Cheese-Cake-Heaven.jpg" alt="Cheese Cake Heaven sandwich">
                 </figure>
