--- a/recipes.html
+++ b/recipes.html
@@ -167,6 +167,15 @@
             </a></article>
 
             <!-- Local's Guide Post -->
+            <article class="lg dessert"><a href="apple-crisp.html">
+                <figure>
+                    <img src="img/recipes/apple-crisp.jpg" alt="Apple Crisp">
+                </figure>
+                <h2>Apple Crisp</h2>
+                <p>- Read More -</p>
+            </a></article>
+
+            <!-- Local's Guide Post -->
             <article class="lg"><a href="buffalo-chicken-pizza.html">
                 <figure>
                     <img src="img/recipes/buffalo-chicken-pizza.jpg" alt="Buffalo Chicken Pizza">
