Index update and drink posts started

--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
             </div>
             <div class="about-me-bio">
                 <h2>About Me</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                <p>Hi, I’m Ben. I started The Green Bay Guy in October 2017 as a way of helping individuals who are coming to Green Bay have a better understanding of all the amazing places to eat, drink, or see while in town. I never imagined it’d grow into what it is today. Thanks to starting this project I’ve been fortunate enough to meet a lot of amazing people, hear some great stories, and learn my city even better.</p>
 
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+                <p>I welcome you to listen to some <a href="podcast.html">fan stories</a> that I’ve been fortunate enough to capture, check out some <a href="locals-guide.html">great places</a> my city has to offer, or check out some of my <a href="recipes.html">game day recipes</a> I put together. Feel free to check out any of my social media pages and interact with me there. I appreciate you stopping by my website.</p>
 
                 <div class="socials">
                     <a href="https://www.facebook.com/TheGreenBayGuy" target="_blank"><img src="img/social-media/facebook-black.png" alt="Facebook icon"></a>
