--- a/nicolet-cafe.html
+++ b/nicolet-cafe.html
@@ -113,6 +113,8 @@
 
             <p>From a portion perspective, their portions are a lot more modest than some of their competitors in the area like <a href="the-pancake-place.html">The Pancake Place</a> and <a href="julies-cafe.html">Julie's Cafe</a>. However, it's by no means a small portion either. All in all, my experience at Nicolet Café was quite enjoyable, however, I don’t know that Nicolet Café would be my first choice of places to go. I personally prefer <a href="the-pancake-place.html">The Pancake Place</a> or <a href="black-honey-hashery.html">Black Honey Hashery</a>.</p>
 
+            <p>Another perk about Nicolet Cafe is they have a coffee bar as well. If you're not looking to sit down and get some breakfast, you can get some fresh baked goods or premium coffee to take with you.</p>
+
             <h2>Rating: 3.75/5</h2>
             
             <form>
