Drink section completed

--- a/eat.html
+++ b/eat.html
@@ -546,6 +546,9 @@
             </a></article>
 
         </div>
+        <div class="disclaimer">
+            <p>*Disclaimer: I have the palate of a seven-year-old. All the ratings are just off my own opinions and experiences, I'm not a food review expert by any means. I'd suggest you'd try any place in Green Bay at least once. Just because I may give it a lower score doesn't mean it's not a dope, it's just not for me.*</p>
+        </div>
     </div>
   
 
