--- a/misc.html
+++ b/misc.html
@@ -79,7 +79,7 @@
             <ul>
                 <li><a href="eat.html">Eat</a></li>
                 <li><a href="see.html">See</a></li>
-                <li><a href="misc.html">Misc</a></li>
+                <li><a href="drink.html">Drink</a></li>
             </ul>
 
         </div>
