--- a/the-green-bay-narrative.html
+++ b/the-green-bay-narrative.html
@@ -72,10 +72,20 @@
         <form class="search-form">
             <input type="text" placeholder="1, episode 37, Corey, etc..." class="search-input">
             <button type="submit" class="search-btn">Go</button>
+            <button class="more-btn">...</button>
         </form>
 
+        <div class="search-more">
+            <ul>
+                <li><a href="eat.html">Eat</a></li>
+                <li><a href="drink.html">Drink</a></li>
+                <li><a href="see.html">See</a></li>
+            </ul>
+
+        </div>
+
         <div class="lg-container">
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-1.html">
                 <figure>
                     <img src="img/Podcast/episode-1-wade-s.jpg" alt="Episode 1 - Wade S.">
@@ -84,7 +94,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-2.html">
                 <figure>
                     <img src="img/Podcast/episode-2-chad-n.jpg" alt="Episode 2 - Chad N.">
@@ -93,7 +103,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-3.html">
                 <figure>
                     <img src="img/Podcast/episode-3-zak-and-ashli.jpg" alt="Episode 3 - Zak and Ashli">
@@ -102,7 +112,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-4.html">
                 <figure>
                     <img src="img/Podcast/episode-4-dave-c.jpg" alt="Episode 4 - Dave C.">
@@ -111,7 +121,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-5.html">
                 <figure>
                     <img src="img/Podcast/episode-5-mark-and-maggie.jpg" alt="Episode 5 - Mark and Maggie">
@@ -120,7 +130,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-6.html">
                 <figure>
                     <img src="img/Podcast/episode-6-matt-ramage.jpg" alt="Episode 6 - Matt Ramage">
@@ -129,7 +139,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-7.html">
                 <figure>
                     <img src="img/Podcast/episode-7-jason-f.jpg" alt="Episode 7 - Jason F.">
@@ -138,7 +148,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-8.html">
                 <figure>
                     <img src="img/Podcast/episode-8-duke-b.jpg" alt="Episode 8 - Duke B.">
@@ -147,7 +157,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-9.html">
                 <figure>
                     <img src="img/Podcast/episode-9-corey-p.jpg" alt="Episode 9 - Corey P.">
@@ -156,7 +166,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-10.html">
                 <figure>
                     <img src="img/Podcast/episode-10-curt-c.jpg" alt="Episode 10 - Curt C.">
@@ -165,7 +175,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-11.html">
                 <figure>
                     <img src="img/Podcast/episode-11-andrew-s.jpg" alt="Episode 11 - Andrew S.">
@@ -174,7 +184,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-12.html">
                 <figure>
                     <img src="img/Podcast/episode-12-jackie-s.jpg" alt="Episode 12 - Jackie S.">
@@ -183,7 +193,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-13.html">
                 <figure>
                     <img src="img/Podcast/episode-13-peter-b.jpg" alt="Episode 13 - Peter B.">
@@ -192,7 +202,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-14.html">
                 <figure>
                     <img src="img/Podcast/episode-14-travis-f.jpg" alt="Episode 14 - Travis F.">
@@ -201,7 +211,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-15.html">
                 <figure>
                     <img src="img/Podcast/episode-15-landon-k.jpg" alt="Episode 15 - Landon K.">
@@ -210,7 +220,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-16.html">
                 <figure>
                     <img src="img/Podcast/episode-16-katie-k.jpg" alt="Episode 16 - Katie K.">
@@ -219,7 +229,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-17.html">
                 <figure>
                     <img src="img/Podcast/episode-17-joe-o.jpg" alt="Episode 17 - Joe O.">
@@ -228,7 +238,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-18.html">
                 <figure>
                     <img src="img/Podcast/episode-18-adam-o.jpg" alt="Episode 18 - Adam O.">
@@ -237,7 +247,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-19.html">
                 <figure>
                     <img src="img/Podcast/episode-19-marianne-k.jpg" alt="Episode 19 - Marianne K.">
@@ -246,7 +256,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-20.html">
                 <figure>
                     <img src="img/Podcast/episode-20-ben-c.jpg" alt="Episode 20 - Ben C.">
@@ -255,7 +265,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-21.html">
                 <figure>
                     <img src="img/Podcast/episode-21-rob-m.jpg" alt="Episode 21 - Rob M.">
@@ -264,7 +274,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-22.html">
                 <figure>
                     <img src="img/Podcast/episode-22-josh-p.jpg" alt="Episode 22 - Josh P.">
@@ -273,7 +283,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-23.html">
                 <figure>
                     <img src="img/Podcast/episode-23-dujuan-harris.jpg" alt="Episode 23 - DuJuan Harris">
@@ -282,7 +292,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-24.html">
                 <figure>
                     <img src="img/Podcast/episode-24-the-drew.jpg" alt="Episode 24 - The Drew">
@@ -291,7 +301,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-25.html">
                 <figure>
                     <img src="img/Podcast/episode-25-mark-d.jpg" alt="Episode 25 - Mark D.">
@@ -300,7 +310,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-26.html">
                 <figure>
                     <img src="img/Podcast/episode-26-raffael-g.jpg" alt="Episode 26 - Raffael G.">
@@ -309,7 +319,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-27.html">
                 <figure>
                     <img src="img/Podcast/episode-27-juan-a.jpg" alt="Episode 27 - Juan A.">
@@ -318,7 +328,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-28.html">
                 <figure>
                     <img src="img/Podcast/episode-28-matt-m.jpg" alt="Episode 28 - Matt M.">
@@ -327,7 +337,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-29.html">
                 <figure>
                     <img src="img/Podcast/episode-29-rob-w.jpg" alt="Episode 29 - Rob W.">
@@ -336,7 +346,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-30.html">
                 <figure>
                     <img src="img/Podcast/episode-30-kevin-t.jpg" alt="Episode 30 - Kevin T.">
@@ -345,7 +355,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-31.html">
                 <figure>
                     <img src="img/Podcast/episode-31-kevin-p.jpg" alt="Episode 31 - Kevin P.">
@@ -354,7 +364,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-32.html">
                 <figure>
                     <img src="img/Podcast/episode-32-aaron-f.jpg" alt="Episode 32 - Aaron F.">
@@ -363,7 +373,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-33.html">
                 <figure>
                     <img src="img/Podcast/episode-33-joe-p.jpg" alt="Episode 33 - Joe P.">
@@ -372,7 +382,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-34.html">
                 <figure>
                     <img src="img/Podcast/episode-34-paul-b.jpg" alt="Episode 34 - Paul B.">
@@ -381,7 +391,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-35.html">
                 <figure>
                     <img src="img/Podcast/episode-35-chris-jacke.jpg" alt="Episode 35 - Chris Jacke">
@@ -390,7 +400,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-36.html">
                 <figure>
                     <img src="img/Podcast/episode-36-robert-d.jpg" alt="Episode 36 - Robert D.">
@@ -399,7 +409,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-37.html">
                 <figure>
                     <img src="img/Podcast/episode-37-roy-meulemans.jpg" alt="Episode 37 - Roy Meulemans">
@@ -408,7 +418,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-38.html">
                 <figure>
                     <img src="img/Podcast/episode-38-john-p.jpg" alt="Episode 38 - John P.">
@@ -417,7 +427,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-39.html">
                 <figure>
                     <img src="img/Podcast/episode-39-alex-d.jpg" alt="Episode 39 - Alex D.">
@@ -426,7 +436,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-40.html">
                 <figure>
                     <img src="img/Podcast/episode-40-oren-burks.jpg" alt="Episode 40 - Oren Burks">
@@ -435,7 +445,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-41.html">
                 <figure>
                     <img src="img/Podcast/episode-41-tony-r.jpg" alt="Episode 41 - Tony R.">
@@ -444,7 +454,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-42.html">
                 <figure>
                     <img src="img/Podcast/episode-42-jarrett-s.jpg" alt="Episode 42 - Jarrett S.">
@@ -453,7 +463,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-43.html">
                 <figure>
                     <img src="img/Podcast/episode-43-carson-c.jpg" alt="Episode 43 - Carson C.">
@@ -462,7 +472,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-44.html">
                 <figure>
                     <img src="img/Podcast/episode-44-steve-tate.jpg" alt="Episode 44 - Steve The Owner Tate">
@@ -471,7 +481,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-45.html">
                 <figure>
                     <img src="img/Podcast/episode-45-don-beebe.jpg" alt="Episode 45 - Don Beebe">
@@ -480,7 +490,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-46.html">
                 <figure>
                     <img src="img/Podcast/episode-46-fred-thurston.jpg" alt="Episode 46 - Fred Thurston">
@@ -489,7 +499,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-47.html">
                 <figure>
                     <img src="img/Podcast/episode-47-senor-cheesehead.jpg" alt="Episode 47 - Senor Cheesehead">
@@ -498,7 +508,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-48.html">
                 <figure>
                     <img src="img/Podcast/episode-48-aj-g.jpg" alt="Episode 48 - AJ G.">
@@ -507,7 +517,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-49.html">
                 <figure>
                     <img src="img/Podcast/episode-49-tim-b.jpg" alt="Episode 49 - Tim B.">
@@ -516,7 +526,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Podcast Post -->
             <article class="lg"><a href="episode-50.html">
                 <figure>
                     <img src="img/Podcast/episode-50-ben-b.jpg" alt="Episode 50 - Ben B. / The Green Bay Guy">
