--- a/recipes.html
+++ b/recipes.html
@@ -76,7 +76,7 @@
 
 
         <div class="lg-container">
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="deep-dish-pizza.html">
                 <figure>
                     <img src="img/recipes/deep-dish.jpg" alt="Chicago Deep Dish Pizza">
@@ -85,7 +85,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="juicy-lucy.html">
                 <figure>
                     <img src="img/recipes/juicy-lucy-burger.jpg" alt="Juicy Lucy burger">
@@ -94,7 +94,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg dessert"><a href="cookie-ice-cream-sandwiches.html">
                 <figure>
                     <img src="img/recipes/ice-cream-cookie-sandwiches.jpg" alt="Cookies Ice Cream Sandwich">
@@ -103,7 +103,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="philly-cheesesteak.html">
                 <figure>
                     <img src="img/recipes/Philly-cheesesteak.jpg" alt="Philadelphia Cheese steak">
@@ -112,7 +112,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="garlic-butter-steak.html">
                 <figure>
                     <img src="img/recipes/garlic-butter-steak.jpg" alt="Garlic Butter Steak">
@@ -121,7 +121,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="primanti-brothers-sandwich.html">
                 <figure>
                     <img src="img/recipes/Primanti-Brothers-Sandwich.jpg" alt="Primanti Brothers Sandwich">
@@ -130,7 +130,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg dessert"><a href="oreo-cheesecake.html">
                 <figure>
                     <img src="img/recipes/oreo-cheesecake.jpg" alt="Oreo Cheese cake">
@@ -139,7 +139,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="mac-n-cheese.html">
                 <figure>
                     <img src="img/recipes/mac-n-cheese.jpg" alt="Macaroni and Cheese">
@@ -148,7 +148,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="carne-asada.html">
                 <figure>
                     <img src="img/recipes/carne-asada.jpg" alt="Carne Asada quesadilla and nachos">
@@ -157,7 +157,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="carolina-pulled-pork.html">
                 <figure>
                     <img src="img/recipes/carolina-pulled-pork.jpg" alt="Carolina Pulled Pork Sandwiches">
@@ -166,7 +166,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg dessert"><a href="apple-crisp.html">
                 <figure>
                     <img src="img/recipes/apple-crisp.jpg" alt="Apple Crisp">
@@ -175,7 +175,7 @@
                 <p>- Read More -</p>
             </a></article>
 
-            <!-- Local's Guide Post -->
+            <!-- Recipe Post -->
             <article class="lg"><a href="buffalo-chicken-pizza.html">
                 <figure>
                     <img src="img/recipes/buffalo-chicken-pizza.jpg" alt="Buffalo Chicken Pizza">
