--- a/deep-dish-pizza.html
+++ b/deep-dish-pizza.html
@@ -74,28 +74,31 @@
             <a href="https://www.youtube.com/watch?v=GSzVI7NkYo8&feature=youtu.be" target="_blank"><img src="img/recipes/deep-dish-play.jpg" alt="Chicago Deep Dish Pizza"></a>
             
             <h1>Chicago Deep Dish Pizza</h1>
+            
+            <div class="recipe-ingredients">
+                <h2>Pizza Dough</h2>
 
-            <h2>Pizza Dough:</h2>
-            <ul>
-                <li>- 3 1/2 to 4 cups of bread flour + extra for kneading</li>
-                <li>- 1 packet of instant yeast (2.25 teaspoons)</li>
-                <li>- 1 teaspoon sugar</li>
-                <li>- 1 1/2 cups of water (110 - 120 degrees F)</li>
-                <li>- 2 teaspoons olive oil + extra for resting</li>
-            </ul>
+                <ul>
+                    <li>- 3 1/2 to 4 cups of bread flour + extra for kneading</li>
+                    <li>- 1 packet of instant yeast (2.25 teaspoons)</li>
+                    <li>- 1 teaspoon sugar</li>
+                    <li>- 1 1/2 cups of water (110 - 120 degrees F)</li>
+                    <li>- 2 teaspoons olive oil + extra for resting</li>
+                </ul>
 
-            <h2>Pizza Toppings:</h2>
-            <ul>
-                <li>- Shredded mozzarella (to preference)</li>
-                <li>- Toppings of your choice</li>
-                <li>- Pizza sauce (enough to cover cheese/toppings)</li>
-            </ul>
+                <h2>Pizza Toppings</h2>
+                <ul>
+                    <li>- Shredded mozzarella (to preference)</li>
+                    <li>- Toppings of your choice</li>
+                    <li>- Pizza sauce (enough to cover cheese/toppings)</li>
+                </ul>
+            </div>
 
             <div class="line-1"></div>
 
-            <h2>Directions:</h2>
+            <h4>Directions:</h4>
 
-            <h2>Pizza Dough:</h2>
+            <h2>Pizza Dough</h2>
 
             <ul>
                 <li>1. In a glass cup or bowl, add water, yeast, and sugar. Gently stir together. Allow to sit 10 - 15 minutes to ensure yeast is active.</li>
@@ -121,7 +124,7 @@
 
             </ul>
 
-            <h2>Pizza:</h2>
+            <h2>Pizza</h2>
 
             <ul>
                 <li>1. Preheat oven to 425 degrees F.</li>
