--- a/eat.html
+++ b/eat.html
@@ -71,8 +71,9 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="Breakfast, Pizza, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
-            <button class="more-btn">...</button>
+            <button type="button" class="more-btn">...</button>
         </form>
 
         <div class="search-more">
@@ -82,6 +83,14 @@
                 <li><a href="misc.html">Misc</a></li>
             </ul>
 
+
+        </div>
+
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
 
         </div>
 
@@ -96,20 +105,20 @@
             </a></article>
 
             <!-- Local's Guide Post -->
-            <article class="lg dinner"><a href="black-honey-hashery.html">
-                <figure>
-                    <img src="img/Locals-Guide/Eat/Breakfast/black-honey-hashery.jpg" alt="Black Honey Hashery's biscuits and gravy">
-                </figure>
-                <h2>Black Honey Hashery | 4.75/5</h2>
-                <p>- Read More -</p>
-            </a></article>
-
-            <!-- Local's Guide Post -->
             <article class="lg dinner"><a href="legend-larrys.html">
                 <figure>
                     <img src="img/Locals-Guide/Eat/Lunch/legend-larrys.jpg" alt="Legend Larry's wings">
                 </figure>
                 <h2>Legend Larry's | 4.75/5</h2>
+                <p>- Read More -</p>
+            </a></article>
+
+            <!-- Local's Guide Post -->
+            <article class="lg dinner"><a href="black-honey-hashery.html">
+                <figure>
+                    <img src="img/Locals-Guide/Eat/Breakfast/black-honey-hashery.jpg" alt="Black Honey Hashery's biscuits and gravy">
+                </figure>
+                <h2>Black Honey Hashery | 4.75/5</h2>
                 <p>- Read More -</p>
             </a></article>
 
