--- a/recipes.html
+++ b/recipes.html
@@ -70,14 +70,14 @@
 
     <div class="lg-section">
         <form class="search-form">
-            <input type="text" placeholder="Park, Free, Lambeau Field, etc..." class="search-input">
+            <input type="text" placeholder="Pizza, Dessert, etc..." class="search-input">
             <button type="submit" class="search-btn">Go</button>
         </form>
 
 
         <div class="lg-container">
             <!-- Recipe Post -->
-            <article class="lg"><a href="deep-dish-pizza.html">
+            <article class="lg lunch dinner"><a href="deep-dish-pizza.html">
                 <figure>
                     <img src="img/recipes/deep-dish.jpg" alt="Chicago Deep Dish Pizza">
                 </figure>
@@ -86,7 +86,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="juicy-lucy.html">
+            <article class="lg lunch dinner"><a href="juicy-lucy.html">
                 <figure>
                     <img src="img/recipes/juicy-lucy-burger.jpg" alt="Juicy Lucy burger">
                 </figure>
@@ -104,7 +104,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="philly-cheesesteak.html">
+            <article class="lg lunch dinner"><a href="philly-cheesesteak.html">
                 <figure>
                     <img src="img/recipes/Philly-cheesesteak.jpg" alt="Philadelphia Cheese steak">
                 </figure>
@@ -113,7 +113,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="garlic-butter-steak.html">
+            <article class="lg lunch dinner"><a href="garlic-butter-steak.html">
                 <figure>
                     <img src="img/recipes/garlic-butter-steak.jpg" alt="Garlic Butter Steak">
                 </figure>
@@ -122,7 +122,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="primanti-brothers-sandwich.html">
+            <article class="lg lunch dinner"><a href="primanti-brothers-sandwich.html">
                 <figure>
                     <img src="img/recipes/Primanti-Brothers-Sandwich.jpg" alt="Primanti Brothers Sandwich">
                 </figure>
@@ -140,7 +140,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="mac-n-cheese.html">
+            <article class="lg lunch dinner"><a href="mac-n-cheese.html">
                 <figure>
                     <img src="img/recipes/mac-n-cheese.jpg" alt="Macaroni and Cheese">
                 </figure>
@@ -149,7 +149,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="carne-asada.html">
+            <article class="lg lunch dinner"><a href="carne-asada.html">
                 <figure>
                     <img src="img/recipes/carne-asada.jpg" alt="Carne Asada quesadilla and nachos">
                 </figure>
@@ -158,7 +158,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="carolina-pulled-pork.html">
+            <article class="lg lunch dinner"><a href="carolina-pulled-pork.html">
                 <figure>
                     <img src="img/recipes/carolina-pulled-pork.jpg" alt="Carolina Pulled Pork Sandwiches">
                 </figure>
@@ -176,7 +176,7 @@
             </a></article>
 
             <!-- Recipe Post -->
-            <article class="lg"><a href="buffalo-chicken-pizza.html">
+            <article class="lg lunch dinner"><a href="buffalo-chicken-pizza.html">
                 <figure>
                     <img src="img/recipes/buffalo-chicken-pizza.jpg" alt="Buffalo Chicken Pizza">
                 </figure>
