--- a/the-green-bay-narrative.html
+++ b/the-green-bay-narrative.html
@@ -71,16 +71,27 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="1, episode 37, Corey, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
             <button class="more-btn">...</button>
         </form>
 
         <div class="search-more">
             <ul>
-                <li><a href="eat.html">Eat</a></li>
-                <li><a href="drink.html">Drink</a></li>
-                <li><a href="see.html">See</a></li>
+                <li>1-10</li>
+                <li>11-20</li>
+                <li>21-30</li>
+                <li>31-40</li>
+                <li>41-50</li>
             </ul>
+
+        </div>
+
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
 
         </div>
 
@@ -571,6 +582,6 @@
         
     </footer>
     <script src="js/menu.js"></script>
-    <script src="js/alternate-search.js"></script>
+    <script src="js/podcast-search.js"></script>
 </body>
 </html>
