--- a/drink.html
+++ b/drink.html
@@ -71,6 +71,7 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="Alcohol, Coffee, Copper Rock, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
             <button class="more-btn">...</button>
         </form>
@@ -81,6 +82,14 @@
                 <li><a href="see.html">See</a></li>
                 <li><a href="misc.html">Misc</a></li>
             </ul>
+
+        </div>
+
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
 
         </div>
 
