--- a/misc.html
+++ b/misc.html
@@ -71,6 +71,7 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="Tickets, Hotel, Parking, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
             <button class="more-btn">...</button>
         </form>
@@ -81,6 +82,14 @@
                 <li><a href="drink.html">Drink</a></li>
                 <li><a href="see.html">See</a></li>
             </ul>
+
+        </div>
+
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
 
         </div>
 
@@ -146,6 +155,6 @@
         
     </footer>
     <script src="js/menu.js"></script>
-    <script src="js/search.js"></script>
+    <script src="js/alternate-search.js"></script>
 </body>
 </html>
