--- a/see.html
+++ b/see.html
@@ -71,6 +71,7 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="Park, Free, Lambeau Field, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
             <button class="more-btn">...</button>
         </form>
@@ -79,8 +80,16 @@
             <ul>
                 <li><a href="eat.html">Eat</a></li>
                 <li><a href="drink.html">Drink</a></li>
-                <li><a href="see.html">See</a></li>
+                <li><a href="misc.html">Misc.</a></li>
             </ul>
+
+        </div>
+
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
 
         </div>
 
@@ -173,6 +182,6 @@
         
     </footer>
     <script src="js/menu.js"></script>
-    <script src="js/search.js"></script>
+    <script src="js/alternate-search.js"></script>
 </body>
 </html>
