--- a/recipes.html
+++ b/recipes.html
@@ -71,9 +71,17 @@
     <div class="lg-section">
         <form class="search-form">
             <input type="text" placeholder="Pizza, Dessert, etc..." class="search-input">
+            <button type="button" class="x-btn">X</button>
             <button type="submit" class="search-btn">Go</button>
         </form>
 
+        <div class="error-message">
+            <h5>Ope.</h5>
+            <p>Your search results came back about as empty as the trophy case in US Bank Stadium.</p>
+
+            <p>Please search again.</p>
+
+        </div>
 
         <div class="lg-container">
             <!-- Recipe Post -->
