--- a/the-green-bay-narrative.html
+++ b/the-green-bay-narrative.html
@@ -83,6 +83,7 @@
                 <li>21-30</li>
                 <li>31-40</li>
                 <li>41-50</li>
+                <li>All</li>
             </ul>
 
         </div>
